@@ -1655,6 +1655,10 @@ erinyes
 ettin
 	The two-headed giant, or ettin, is a vicious and unpredictable
 	hunter that stalks by night and eats any meat it can catch.
+evil eye
+	Eat thou not the bread of him that hath an evil eye,
+	neither desire thou his dainty meats.
+		[ Proverbs, 23:6 ]
 excalibur
 	At first only its tip was visible, but then it rose, straight,
 	proud, all that was noble and great and wondrous.  The tip of
