@@ -1178,12 +1178,12 @@ boolean want_disp;
 #endif
 	if (u.moreluck > 0) you_have("extra luck");
 	else if (u.moreluck < 0) you_have("reduced luck");
-	if (carrying(LUCKSTONE) || stone_luck(TRUE)) {
+	if (has_luckitem()) {
 	    ltmp = stone_luck(FALSE);
 	    if (ltmp <= 0)
-		enl_msg("Bad luck ", "does", "did", " not time out for you");
+		enl_msg("Bad luck ", "times", "timed", " out slowly for you");
 	    if (ltmp >= 0)
-		enl_msg("Good luck ", "does", "did", " not time out for you");
+		enl_msg("Good luck ", "times", "timed", " out slowly for you");
 	}
 
 	if (u.ugangr) {
