@@ -362,6 +362,13 @@ NEARDATA struct permonst mons[] = {
 	SIZ(10, 10, 0, MS_SILENT, MZ_SMALL), MR_ELEC, MR_ELEC,
 	M1_FLY|M1_BREATHLESS|M1_NOLIMBS|M1_NOHEAD|M1_MINDLESS,
 	M2_HOSTILE|M2_NEUTER, M3_INFRAVISIBLE, HI_ZAP),
+    MON("evil eye", S_EYE, 
+	LVL(10, 3, 4, 30, -11), (G_NOCORPSE|G_SHEOL|G_HELL|G_GENO|1),
+	A(ATTK(AT_GAZE, AD_LUCK, 0, 0), NO_ATTK, NO_ATTK,
+	  NO_ATTK, NO_ATTK, NO_ATTK),
+	SIZ(10, 10, 0, MS_SILENT, MZ_SMALL), 0, 0,
+	M1_FLY|M1_BREATHLESS|M1_NOLIMBS|M1_NOHEAD|M1_MINDLESS,
+	M2_HOSTILE|M2_NOPOLY|M2_NEUTER, M3_INFRAVISIBLE, CLR_BRIGHT_MAGENTA),
 #if 0		/* not yet implemented */
     MON("beholder", S_EYE,
 	LVL(6, 3, 4, 0, -10), (G_NOSHEOL|G_GENO|2),
